# COD25-Simulation-Framework

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
include/: argument.hpp  argument_generator.hpp  configs.hpp  dut.hpp  enums.hpp  golden.hpp  isa.hpp  operation.hpp  operators.hpp  simulator.hpp
mem/: instr.ini
vsrc/: top.v
vsrc/mem_ip_sim/: data_mem.v  inst_mem.v
